Q1/public.tf
resource "aws_subnet" "public_subnet" {

vpc_id = "${aws_vpc.vpc.id}"

cidr_block = "10.0.0.0/24"

map_public_ip_on_launch = true

availability_zone = "us-east-1a"

tags = {

Name = "KPMG_Devops_Project publicsubnet"

}

}

resource "aws_route_table" "public_route_table" {

vpc_id = "${aws_vpc.vpc.id}"

tags = {

Name = "KPMG_Devops_Project public_route"

}

}

resource "aws_route" "public_route" {

route_table_id = "${aws_route_table.public_route_table.id}"

destination_cidr_block = "0.0.0.0/0"

nat_gateway_id = "${aws_nat_gateway.nat.id}"

}

resource "aws_route_table_association" "public_subnet_association" {

subnet_id = "${aws_subnet.public_subnet.id}"

route_table_id = "${aws_route_table.public_route_table.id}"

}
